--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap');
 
+
+html {
+    font-size: 100%;
+}
 body {
     margin: 0;
     font-family: 'Red Hat Display', sans-serif;
@@ -7,7 +11,6 @@ body {
     background-image: url(./images/pattern-background-desktop.svg);
     background-repeat: no-repeat;
     background-size: contain;
-    font-size: 100%;
 }
 .container {
     height: 100vh;
@@ -19,7 +22,8 @@ body {
     padding-bottom: 50px;
     margin: 24px;
     background-color: #ffffff;
-    max-width: 450px;
+    max-width: 100%;
+    width: 450px;
     height: fit-content;
     display: flex;
     flex-direction: column;
@@ -33,13 +37,12 @@ body {
     block-size: auto;
 }
 .change-tab-card {
-    margin: auto;
-    margin-bottom: 30px;
+    margin: 0 10% 30px;
     padding: 26px;
     background-color: #f5f7ff;
-    min-width: 302px;
     display: flex;
     align-items: center;
+    flex-wrap: wrap;
     justify-content: space-between;
     border-radius: 10px;
 }
@@ -50,6 +53,7 @@ body {
 }
 .icon-text {
     display: flex;
+    flex-wrap: wrap;
 }
 h1, h4 {
     padding: 0;
@@ -89,14 +93,14 @@ p {
     font-weight: 700;
 }
 button {
-    margin: auto;
+    margin-right: 10%;
+    margin-left: 10%;
     margin-bottom: 32px;
     display: block;
     border: none;
     border-radius: 10px;
     background-color: #3829e0;
     color: #ffffff;
-    min-width: 354px;
     height: 52px;
     box-shadow: #3829e012 0px 1px 1px, #3829e012 0px 2px 2px, #3829e012 0px 4px 4px, #3829e012 0px 8px 8px, #3829e012 0px 16px 16px;
     font-family: 'Red Hat Display', sans-serif;
@@ -110,11 +114,61 @@ button {
     font-size: 0.875rem;
     text-decoration: none;
 }
-@media screen and (max-width: 480px){
+.btn-change:hover {
+    color: #766CF1;
+    cursor: pointer;
+}
+button:hover {
+    background-color: #766CF1;
+    cursor: pointer;
+}
+.btn-cancle:hover {
+    color: #1f2f56;
+    cursor: pointer;
+}
+@media screen and (max-width: 436px){
+    h1 {
+        font-size: 1.375rem;
+        margin-top: 10%;
+        margin-bottom: 5%;
+    }
+    .text {
+        font-size: 0.938rem;
+        margin-bottom: 7%;
+    }
+    h4, p {
+        font-size: 0.875rem;
+    }
+    .btn-change {
+        font-size: 0.75rem;
+        margin-bottom: 5%;
+    }
+    .text, .change-tab-card, button {
+        margin-left: 24px;
+        margin-right: 24px;
+    }
     .change-tab-card {
-        min-width: 228px;
+        padding: 5%;
+        margin-bottom: 7.5%;
     }
     button {
-        min-width: 280px;
+        height: 50px;
+        margin-bottom: 7%;
+    }
+    .card {
+        padding-bottom: 9%;
+    }
+}
+@media screen and (max-width: 330px) {
+    .icon-text, .change-tab-card {
+        flex-direction: column;
+    }
+    .icon-music {
+        width: 48px;
+        padding: 0 0 5px;
+        align-self: center;
+    }
+    .btn-change {
+        padding-top: 5px;
     }
 }
